--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "portfolio",
+  "homepage": "git@github.com:annebequet/portfolio.git",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --watch",
-    "develop": "webpack serve --open && npm run watch"
+    "build": "webpack",
+    "develop": "webpack serve --open && npm run watch",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "css-loader": "^5.2.6",
+    "gh-pages": "^3.2.1",
     "style-loader": "^2.0.0"
   },
   "devDependencies": {
