--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://github.com/annebequet/portfolio",
+  "homepage": "https://annebequet.github.io/portfolio/",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
