--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "develop": "webpack serve --open && npm run watch",
+    "develop": "webpack serve"
   },
   "keywords": [],
   "author": "",
