rewrite firebase routes

--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,7 @@
     ],
     "rewrites": [
       {
-        "source": "**",
+        "source": "/project/:id",
         "destination": "/index.html"
       }
     ]
