--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "develop": "webpack serve --open && npm run watch",
-    "build": "webpack serve"
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
