--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,10 @@
       {
         "source": "/contact",
         "destination": "/index.html"
+      },
+      {
+        "source": "/about",
+        "destination": "/index.html"
       }
     ]
   }
