--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "css-loader": "^5.2.6",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.6.0",
-    "parallax-js": "^3.1.0",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
+    "simple-parallax-js": "^5.6.2",
     "style-loader": "^2.0.0",
     "webpack": "^5.39.0",
     "webpack-cli": "^4.7.2",
